5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1593_1801.log
== TEST (2019-03-28 10:46:09) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = float (input("Digite o numero de repeticoes:"))
print ("Abra"+objeto)*num
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("Abra"+objeto)*num
TypeError: unsupported operand type(s) for *: 'NoneType' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:47:03) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = float (input("Digite o numero de repeticoes:"))
print string(("Abra"+objeto)*num)
-- ERROR:
File "XXXX", line 3
    print string(("Abra"+objeto)*num)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:47:32) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = float (input("Digite o numero de repeticoes:"))
print (float("Abra"+objeto)*num)
-- EXECUTION TIME:
0.168539
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1801/main.py", line 3, in <module>
    print (float("Abra"+objeto)*num)
ValueError: could not convert string to float: 'Abralivro'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:48:26) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = float (input("Digite o numero de repeticoes:"))
print ("Abra",objeto)
-- OUTPUT:
Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:48:48) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = float (input("Digite o numero de repeticoes:"))
print ("Abra",objeto)*num
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("Abra",objeto)*num
TypeError: unsupported operand type(s) for *: 'NoneType' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:51:19) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = float (input("Digite o numero de repeticoes:"))
x = ("Abra"+objeto)
print (x)
-- EXECUTION TIME:
0.151754
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:51:21) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = float (input("Digite o numero de repeticoes:"))
x = ("Abra"+objeto)
print (x)
-- OUTPUT:
Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:51:50) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = float (input("Digite o numero de repeticoes:"))
x = ("Abra "+objeto)
print (x)
-- OUTPUT:
Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:52:15) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = float (input("Digite o numero de repeticoes:"))
x = ("Abra "+objeto)
print (num*x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (num*x)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:52:41) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = int (input("Digite o numero de repeticoes:"))
x = ("Abra "+objeto)
print (num*x)
-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:53:28) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = int (input("Digite o numero de repeticoes:"))
x = ("Abra "+objeto)
print (num* x)
-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:54:33) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = int (input("Digite o numero de repeticoes:"))
x = ("Abra "+objeto)
print (num*x)
-- EXECUTION TIME:
0.198205
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carroAbra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:55:33) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = int (input("Digite o numero de repeticoes:"))
x = ("Abra "+objeto" ")
print (num*x)

-- ERROR:
File "XXXX", line 3
    x = ("Abra "+objeto" ")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:56:02) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = int (input("Digite o numero de repeticoes:"))
x = ("Abra "+objeto"")
print (num*x)

-- ERROR:
File "XXXX", line 3
    x = ("Abra "+objeto"")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:56:53) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = int (input("Digite o numero de repeticoes:"))
x = ("Abra "+objeto"".)
print (num*x)

-- ERROR:
File "XXXX", line 3
    x = ("Abra "+objeto"".)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:57:46) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = int (input("Digite o numero de repeticoes:"))
x = ("Abra "+objeto+" ")
print (num*x)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:58:10) 
-- CODE:
objeto = (input ("Digite o nome do objeto:"))
num = int (input("Digite o numero de repeticoes:"))
x = ("Abra "+objeto+" ")
print (num*x)

-- EXECUTION TIME:
0.199038
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
